--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <section>
-      <p>loremhhhhhjjjjjj </p>
+      <p>holo como esr </p>
     </section>
     <footer>
       derecho reservados adrv ®2021
